[package]
name = "hanoi"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
fmt2 = { git = "https://github.com/coolCucumber-cat/fmt2.git", version = "0.1.0" }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["rt-multi-thread"] }
